# grafika-2

./: CMakeLists.txt  README.md
grafika-2/: imps.cpp  main.cpp
grafika-2.xcodeproj/: project.pbxproj
grafika-2.xcodeproj/project.xcworkspace/: contents.xcworkspacedata
grafika-2.xcodeproj/xcuserdata/Andrew.xcuserdatad/xcschemes/: grafika-2.xcscheme  xcschememanagement.plist
src/: imps.cpp  main.cpp
